zefin-user-data-intake-system/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zefin-user-data-intake-system
  name: zefin-user-data-intake-system
  annotations:
    configmap.reloader.stakater.com/reload: "zefin-user-data-intake-system"
    secret.reloader.stakater.com/reload: "zefin-user-data-intake-system" 
  namespace: zefin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zefin-user-data-intake-system
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:   
      labels:
        app: zefin-user-data-intake-system
    spec:                   
      containers:
        - name: zefin-user-data-intake-system
          image: luuna/zefin-user-data-intake-system:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /api/_health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 20
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/_health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 20
            successThreshold: 1
            timeoutSeconds: 15
          resources:
            requests:
              memory: "100Mi"
              cpu: "150m"
            limits:
              memory: "500Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /tmp
              name: cache
              readOnly: false
            - mountPath: /.yarn
              name: cache
              readOnly: false
            - mountPath: /usr/src/app/.next/cache/images
              name: cache
              readOnly: false
            - mountPath: /.cache
              name: cache
              readOnly: false             
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 10000
            runAsUser: 10000
      volumes:
        - emptyDir: {}
          name: cache           
      enableServiceLinks: true
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        purpose: backend
      restartPolicy: Always
      serviceAccount: zefin-user-data-intake-system
      serviceAccountName: zefin-user-data-intake-system
