zefin-user-data-intake-system/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zefin-user-data-intake-system
    service: zefin-user-data-intake-system
  name: zefin-user-data-intake-system
  namespace: zefin
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: zefin-user-data-intake-system
  type: ClusterIP
